# elasticmapper

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTION_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: .pre-commit-config.yaml
.github/workflows/: github-actions.yml
docs/: basic_usage.rst  conf.py  index.rst  mapper.md  mapper.rst
elasticmapper/: __init__.py  mapper.py
elasticmapper/orm_mappings/: __init__.py  django_mapping.py  peewee_mapping.py  sqlalchemy_mapping.py
src/: mapper.py  supported_orms.py
src/elasticmapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/orm_mappings/: __init__.py
tests/: common.py  test_django_orm.py  test_peewee_orm.py  test_sqlalchemy_orm.py
